<resources>
    <string name="app_name">Foody</string>
    <!--Array for Drawer List View Items-->
    <!-- String Array-->
    <string-array name="drawerListItem_guest_mode">
        <item>Breakfast</item>
        <item>Starter</item>
        <item>Main Course</item>
        <item>Beverages</item>
        <item>Sweets</item>
    </string-array>

    <string-array name="drawerListItem_admin_mode">
        <item>Breakfast</item>
        <item>Starter</item>
        <item>Main Course</item>
        <item>Beverages</item>
        <item>Sweets</item>
        <item>Admin Mode</item>
    </string-array>

    <string-array name="drawerListItem_superuser_mode">
        <item>Breakfast</item>
        <item>Starter</item>
        <item>Main Course</item>
        <item>Beverages</item>
        <item>Sweets</item>
        <item>Admin Mode</item>
        <item>SuperUser Mode</item>
    </string-array>

    <!--Admin screen data-->
    <string name="upload_item">Upload Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="order_management">Order Management</string>
    <string name="finance_management">Finance Management</string>
    <string name="developer_call">Developer Help</string>

    <!--Admin textview : upload item -->
    <string name="item_image">Select Image</string>
    <string name="item_id_tv">Item Id</string>
    <string name="item_name_tv">Item Name</string>
    <string name="item_type_tv">Item Type (Veg/Non-veg)</string>
    <string name="item_cuisine_tv">Item Cuisine</string>
    <string name="item_price_tv">Item Price</string>
    <string name="item_rating_tv">Item Rating</string>
    <string name="item_avaiability_tv">Item Availability</string>

    <!--Admin edittext : upload item -->
    <string name="item_id_et">Item Id</string>
    <string name="item_name_et">Item Name</string>
    <string name="item_type_et">Item Type(Veg/Non-veg)</string>
    <string name="item_cuisine_et">Item Cuisine</string>
    <string name="item_price_et">Item Price</string>
    <string name="item_rating_et">Item Rating</string>
    <string name="item_avaiability_et">Item Availability</string>

    <!--Admin button : upload item -->
    <string name="button_upload_item">Upload</string>

    <!--Spinner : Data-->
    <string-array name="item_type_spinner_entries">
        <item>Item Type(Veg/Non-veg)</item>
        <item>Vegetarian</item>
        <item>Non-vegetarian</item>
    </string-array>

    <string-array name="item_cuisine_spinner_entries">
        <item>Item Cuisine</item>
        <item>Indian</item>
        <item>Indian-Punjabi</item>
        <item>Indian-Bengoli</item>
        <item>Indian-Kolkatta</item>
        <item>Indian-Gujrati</item>
        <item>Indian-Kerala</item>
        <item>Chineese</item>
        <item>Italian</item>
    </string-array>

    <string-array name="item_rating_spinner_entries">
        <item>Item Rating</item>
        <item>1.0 Star</item>
        <item>2.0 Star</item>
        <item>3.0 Star</item>
        <item>4.0 Star</item>
        <item>5.0 Star</item>
    </string-array>

    <string-array name="item_availability_spinner_entries">
        <item>Item Availability</item>
        <item>Availabile</item>
        <item>Not Availabile</item>
    </string-array>


    <!--Nav Drawer Strings-->
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>

    <!--Splash screen Data-->
    <string name="Developer"> Developed by <b>Team Foody</b></string>
</resources>
