<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/layout_background_yellow_border_square">

                <ImageView
                    android:id="@+id/item_ImgView"
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_placeholder"/>

                <TextView
                    android:id="@+id/item_Image_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="180dp"
                    android:fontFamily="@string/font_family_regular"
                    android:text="@string/item_image"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_thin"
                    android:text="@string/item_id_tv"
                    android:textColor="@color/coral_new"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/item_id_et"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/layout_background_yellow_border"
                    android:ems="10"
                    android:focusable="true"
                    android:fontFamily="@string/font_family_thin"
                    android:gravity="center_horizontal"
                    android:hint="@string/item_id_et"
                    android:inputType="number"
                    android:textAlignment="textStart"
                    android:textColorHint="@color/low_grey_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_thin"
                    android:text="@string/item_name_tv"
                    android:textColor="@color/coral_new"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/item_name_et"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/layout_background_yellow_border"
                    android:ems="10"
                    android:fontFamily="@string/font_family_thin"
                    android:gravity="center_horizontal"
                    android:hint="@string/item_name_et"
                    android:inputType="textCapSentences"
                    android:textAlignment="textStart"
                    android:textColorHint="@color/low_grey_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_thin"
                    android:text="@string/item_type_tv"
                    android:textColor="@color/coral_new"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/item_type_spinner"
                    android:layout_width="300dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/layout_background_yellow_border"
                    android:gravity="center_horizontal"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_thin"
                    android:text="@string/item_rating_tv"
                    android:textColor="@color/coral_new"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/item_rating_spinner"
                    android:layout_width="300dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/layout_background_yellow_border"
                    android:gravity="center_horizontal"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_thin"
                    android:text="@string/item_price_tv"
                    android:textColor="@color/coral_new"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/item_price_et"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/layout_background_yellow_border"
                    android:ems="10"
                    android:fontFamily="@string/font_family_thin"
                    android:gravity="center_horizontal"
                    android:hint="@string/item_price_et"
                    android:inputType="number"
                    android:textAlignment="textStart"
                    android:textColorHint="@color/low_grey_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_cuisine_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_thin"
                    android:text="@string/item_cuisine_tv"
                    android:textColor="@color/coral_new"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/item_cuisine_spinner"
                    android:layout_width="300dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/layout_background_yellow_border"
                    android:gravity="center_horizontal"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_avaiability_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/font_family_thin"
                    android:text="@string/item_avaiability_tv"
                    android:textColor="@color/coral_new"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/item_avaiability_spinner"
                    android:layout_width="300dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/layout_background_yellow_border"
                    android:gravity="center_horizontal"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/layout_background_button_red"
                android:text="@string/button_upload_item"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#fff"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>