<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="515dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@color/low_grey_color_new" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-140dp"
                android:scaleType="fitCenter"
                android:src="@drawable/img_add_item" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/layout_background_low_gray">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_edit" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:ems="15"
                            android:focusable="true"
                            android:hint="@string/item_id_et"
                            android:inputType="number"
                            android:maxLength="10"
                            android:textColor="@color/black"
                            android:textColorHint="@color/low_grey_color" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="90dp"
                        android:src="@drawable/ic_edit" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp">

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:ems="15"
                            android:focusable="true"
                            android:hint="@string/item_name_et"
                            android:inputType="textCapSentences"
                            android:maxLength="30"
                            android:textColor="@color/black"
                            android:textColorHint="@color/low_grey_color" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="155dp"
                        android:src="@drawable/ic_edit" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="140dp">

                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:ems="15"
                            android:focusable="true"
                            android:hint="@string/item_price_et"
                            android:inputType="number"
                            android:maxLength="4"
                            android:textColor="@color/black"
                            android:textColorHint="@color/low_grey_color" />
                    </android.support.design.widget.TextInputLayout>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="2.5dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/navy_blue_light" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/layout_background_low_gray">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/item_type_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@string/font_family_thin"
                            android:text="@string/item_type_tv"
                            android:textColor="@color/accent"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/item_type_spinner"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/item_type_tv"
                            android:layout_marginLeft="16dp"
                            android:layout_toEndOf="@id/item_type_tv"
                            android:entries="@array/item_type_spinner_entries"
                            android:gravity="center_vertical"
                            android:spinnerMode="dialog"
                            android:textAlignment="center" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="45dp">

                        <TextView
                            android:id="@+id/item_cuisine_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@string/font_family_thin"
                            android:text="@string/item_cuisine_tv"
                            android:textColor="@color/accent"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/item_cuisine_spinner"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/item_cuisine_tv"
                            android:layout_toEndOf="@id/item_cuisine_tv"
                            android:entries="@array/item_cuisine_spinner_entries"
                            android:gravity="center_vertical"
                            android:spinnerMode="dialog"
                            android:textAlignment="center" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="85dp">

                        <TextView
                            android:id="@+id/item_rating_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:fontFamily="@string/font_family_thin"
                            android:text="@string/item_rating_tv"
                            android:textColor="@color/accent"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/item_rating_spinner"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/item_rating_tv"
                            android:layout_marginLeft="3dp"
                            android:layout_toEndOf="@id/item_rating_tv"
                            android:entries="@array/item_rating_spinner_entries"
                            android:gravity="center_vertical"
                            android:spinnerMode="dialog"
                            android:textAlignment="center" />

                    </RelativeLayout>

                </FrameLayout>

                <RelativeLayout
                    android:id="@+id/button_rl"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="2.5dp"
                        android:background="@color/navy_blue_light" />

                    <Button
                        android:id="@+id/button_available"
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/layout_background_green_available"
                        android:text="Available"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/button_not_available"
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_toEndOf="@+id/button_available"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/layout_background_red_not_available"
                        android:text="Not Available"
                        android:textAllCaps="false" />


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:background="@color/light_black"
        android:fontFamily="@string/font_family_thin"
        android:text="@string/button_upload_item"
        android:textColor="@color/bright_yellow"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>